# FilingAlpha

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  report.yml
api/: Dockerfile  __init__.py
api/app/: __init__.py  deps.py  main.py  metrics.py
api/app/routers/: __init__.py  backtests.py  companies.py  predictions.py  signals.py
core/: __init__.py  config.py  db.py  models.py  schemas.py
data/universe/: smallmid_2018.json
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: EmptyState.tsx  ErrorBanner.tsx  LoadingSpinner.tsx  NavBar.tsx
frontend/src/views/: BacktestView.tsx  ModelView.tsx  SignalExplorer.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_event_study_backtest.py  0003_company_ingest_state.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: filing_alpha.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
pipeline/: __init__.py  backtest.py  compute_signals.py  ingest.py  model.py  net.py  returns.py
pipeline/signals/: __init__.py  lm_lexicon_min.py  loughran_mcdonald.py  readability.py  risk_factors.py  similarity.py
reporting/: __init__.py  data.py  latex.py  narrative.py  plots.py  report.py
scripts/: build_universe.py  compute_signals_shard.py  ingest_batch.py  run_pipeline.py  seed_universe.py
tests/: conftest.py  test_api.py  test_backtest.py  test_compute_signals.py  test_ingest.py  test_ingest_state.py  test_model_nolookahead.py  test_net.py  test_reporting.py  test_signals.py
